# dist/openapi.yaml
@@ -82,7 +82,9 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/RecipePreview'
+                  allOf:
+                    - $ref: '#/components/schemas/RecipePreview'
+                    - $ref: '#/components/schemas/Addition'
         "401":
           description: user is not authorized
       security:
@@ -130,7 +132,9 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/RecipePreview'
+                allOf:
+                  - $ref: '#/components/schemas/RecipePreview'
+                  - $ref: '#/components/schemas/FullDisplay'
         "404":
           description: recipeId is not exists
   /users/newRecipe:
@@ -143,17 +147,16 @@ paths:
         content:
           application/json:
             schema:
-              type: object
-              properties:
-                recipeId:
-                  type: integer
-                  description: reciepe's id which the user saved
-                  example: 716429
+                allOf:
+                  - $ref: '#/components/schemas/CreateRecipe'
+                  - $ref: '#/components/schemas/FullDisplay'
       responses:
         "201":
           description: The Recipe successfully saved in your recipes
         "401":
           description: user is not authorized
+      security:
+      - cookieAuth: []
   /users/myRecipes:
     get:
       tags:
@@ -170,6 +173,8 @@ paths:
                   $ref: '#/components/schemas/RecipePreview'
         "401":
           description: user is not authorized
+      security:
+      - cookieAuth: []
   /users/lastViewed:
     get:
       tags:
@@ -183,9 +188,13 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/RecipePreview'
+                  allOf:
+                    - $ref: '#/components/schemas/RecipePreview'
+                    - $ref: '#/components/schemas/Addition'
         "401":
           description: user is not authorized
+      security:
+      - cookieAuth: []
   /users/myFamilyRecipes:
     get:
       tags:
@@ -202,6 +211,8 @@ paths:
                   $ref: '#/components/schemas/FamilyRecipes'
         "401":
           description: user is not authorized
+      security:
+      - cookieAuth: []
   /users/{recipeId}:
     get:
       tags:
@@ -227,6 +238,8 @@ paths:
                   - $ref: '#/components/schemas/FullDisplay'
         "401":
           description: user is not authorized
+      security:
+      - cookieAuth: []
   /recipes/getRandomRecipes:
     get:
       tags:
@@ -240,7 +253,9 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/RecipePreview'
+                  allOf:
+                    - $ref: '#/components/schemas/RecipePreview'
+                    - $ref: '#/components/schemas/Addition'
   /recipes/search:
     get:
       tags:
@@ -304,9 +319,9 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/RecipePreview'
-  
-
+                  allOf:
+                    - $ref: '#/components/schemas/RecipePreview'
+                    - $ref: '#/components/schemas/Addition'
 components:
   schemas:
     User:
@@ -397,7 +412,7 @@ components:
           type: boolean
           description: indication if the recipe is vegan
           example: false
-        glutenFree:
+        gluten_free:
           type: boolean
           description: indication if the recipe is gluten free
           example: false
@@ -452,6 +467,50 @@ components:
           type: integer
           description: number of meals
           example: 4
+    CreateRecipe:
+      type: object
+      properties:
+        title:
+          type: string
+          description: recipe name
+          example: Simple Macaroni and Cheese
+        image:
+          type: string
+          description: recipe image
+          format: URL
+          example: https://spoonacular.com/recipeimages/655455-566x370.jpg
+        readyInMinutes:
+          type: integer
+          description: the time takes to make this recipe
+          example: 45
+        popularity:
+          type: integer
+          description: how many likes got this recipe
+          example: 5987
+        vegetarian:
+          type: boolean
+          description: indication if the recipe is vegetarian
+          example: false
+        vegan:
+          type: boolean
+          description: indication if the recipe is vegan
+          example: false
+        gluten_free:
+          type: boolean
+          description: indication if the recipe is gluten free
+          example: false
+    Addition:
+      type: object
+      properties:
+        viewed:
+          type: boolean
+          description: indication if the recipe was viewed by the user
+          example: false
+        favorite:
+          type: boolean
+          description: indication if the recipe was saved as favorite by the user
+          example: false
+
 
       
 
